--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,6 +9,7 @@
     "oidc-client": "^1.11.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-paginate": "^7.1.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
